diss: title and author in pdf properties

--- a/diss.tex
+++ b/diss.tex
@@ -18,6 +18,11 @@
 %\includeonly{appendix2}
 %\includeonly{luck}
 
+\hypersetup {
+pdftitle = {Generalized Bayesian Inference under Prior-Data Conflict},
+pdfauthor = {Gero Walter}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%  Beginn des Dokuments  %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
