diss: probeexemplar corrections

--- a/appendix1.tex
+++ b/appendix1.tex
@@ -122,7 +122,7 @@ In a nutshell, the result is that both conjugate models do react
 to prior-data conflict by an enlarged factor to the variance-covariance matrix
 of the distribution on the regression coefficients $\bbeta$; however, this reaction is unspecific, as it affects the
 variance and covariances of all components of $\bbeta$ in a uniform way
--- even if the conflict occurs only in one single component.
+--- even if the conflict occurs only in one single component.
 
 Probably such an unspecific reaction of the variance is the most a (classical)
 Bayesian statistician can hope for, and traditional probability theory based on precise probabilities can offer.
@@ -154,7 +154,7 @@ in human decision making, in the tradition of Ellsberg's \parencite*{1961:ellsbe
 and artificial intelligence,\footnote{See, e.g., \textcite{1996:walley::expert}
 for the use of imprecise probability methods in expert systems.}
 where the exclusive role of probability
-as a methodology for handling uncertainty has eloquently been rejected \cite{1999:klir}:
+as a methodology for handling uncertainty has eloquently been rejected \parencite{1999:klir}:
 \begin{quotation}
 \begin{small}
 %``
