--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -68,7 +68,7 @@
   year = {1988},
   number = {NUREG/CR-4780},
   address = {Newport Beach, CA (USA)},
-  month = jan,
+  optmonth = jan,
 }
 
 @techreport{2011:iaea::report,
