diss: eidesst. versicherung as last page

--- a/versicherung.tex
+++ b/versicherung.tex
@@ -1,8 +1,7 @@
-\addcontentsline{toc}{chapter}{\protect Eidesstattliche Versicherung}
 
-
-%\selectlanguage{ngerman}
+\selectlanguage{ngerman}
 \chapter*{Eidesstattliche Versicherung}
+\addcontentsline{toc}{chapter}{\protect Eidesstattliche Versicherung}
 
 Hiermit erkläre ich an Eides statt, dass diese Dissertation von mir
 selbstständig und ohne unerlaubte Beihilfe angefertigt ist.\\[3ex]
