--- a/zusammenfassung.tex
+++ b/zusammenfassung.tex
@@ -78,4 +78,4 @@ und deren jeweiligen Stärken und Schwächen diskutiert,
 insbesondere in Bezug auf die Präzision von Inferenzaussagen
 bei einem Konflikt von Vorwissen und beobachteten Daten.
 
-%\selectlanguage{english}
+\selectlanguage{english}
