diss: eidesst. erkl. out

--- a/diss.tex
+++ b/diss.tex
@@ -97,8 +97,8 @@ pdfauthor = {Gero Walter}
   \printbibliography
   \addcontentsline{toc}{chapter}{\protect Bibliography}
 
-  \markboth{Eidesstattliche Versicherung}{Eidesstattliche Versicherung}
-  \include{versicherung}
+%  \markboth{Eidesstattliche Versicherung}{Eidesstattliche Versicherung}
+%  \include{versicherung}
 
 %  \include{lebenslauf}
 
