--- a/appendix2.tex
+++ b/appendix2.tex
@@ -21,7 +21,7 @@ and show that it will indeed lead to the desired properties.
 \label{sec:miksworld}
 
 In the parametrisation in terms of $\nz$ and $\yz$, described in Section~\ref{sec:regularconjugates},
-a conjugate priors is updated to its respective posterior by a shift in the parameter space,
+a conjugate prior is updated to its respective posterior by a shift in the parameter space,
 given by \eqref{eq:canonicalupdate}:
 \begin{align*}
 \nz &\mapsto \nz + n\,, &
