diss: eidesstattl. erkl. in

--- a/diss.tex
+++ b/diss.tex
@@ -44,6 +44,7 @@ pdfauthor = {Gero Walter}
       {Prof.\ Dr.\ Frank P.A.\ Coolen}         % Name des Zweitgutachters
       {25.10.~2013}                            % Datum der muendlichen Pruefung
 
+  \include{versicherung}
   \include{danksagung}
 
   \tableofcontents
@@ -98,7 +99,6 @@ pdfauthor = {Gero Walter}
   \addcontentsline{toc}{chapter}{\protect Bibliography}
 
 %  \markboth{Eidesstattliche Versicherung}{Eidesstattliche Versicherung}
-%  \include{versicherung}
 
 %  \include{lebenslauf}
 
