--- a/versicherung.tex
+++ b/versicherung.tex
@@ -1,7 +1,6 @@
 
 \selectlanguage{ngerman}
 \chapter*{Eidesstattliche Versicherung}
-\addcontentsline{toc}{chapter}{\protect Eidesstattliche Versicherung}
 
 Hiermit erkläre ich an Eides statt, dass diese Dissertation von mir
 selbstständig und ohne unerlaubte Beihilfe angefertigt ist.\\[3ex]
@@ -9,5 +8,5 @@ selbstständig und ohne unerlaubte Beihilfe angefertigt ist.\\[3ex]
 München, den 14.~August 2013\\[2ex]
 \hspace*{0.5\textwidth} {\small Gero Walter}
 
-
+\setcounter{page}{3}
 \selectlanguage{english}
